# ideas

./: 20220101p0.md  Cargo.toml  _config.yml  index.html  index.md  new.sh
_drafts/: 001.md  004.md  005.md  006.md  007.md  010.md  011.md  013.md  015.md  016.md  018.md  023.md  027.md  030.md  031.md  033.md  036.md  037.md  038.md  042.md  044.md  045.md  046.md  050.md  051.md  052.md  055.md  060.md  062.md  066.md  068.md  20220101p0.md  20220105p0.md
_pages/: about.md
_posts/: 2021-12-02-p0.md  2021-12-02-p1.md  2021-12-02-p2.md  2021-12-04-p0.md  2021-12-04-p2.md  2021-12-04-p3.md  2021-12-05-p0.md  2021-12-07-p1.md  2021-12-07-p2.md  2021-12-09-p0.md  2021-12-11-p0.md  2021-12-12-p0.md  2021-12-15-p0.md  2021-12-18-p0.md  2021-12-22-p1.md  2021-12-24-p0.md  2021-12-27-p0.md
assets/: main.css
content/: 2021-12-02T10:17:38+08:00  2021-12-03T21:42:00+08:00.md  2021-12-06T16:06:00+08:00  2021-12-07T14:05:00+08:00  2021-12-09T14:56:00+08:00.md  2021-12-09T17:13:00+08:00  2021-12-12T22:48:00+08:00.md  2021-12-17T13:38:00+08:00  2021-12-18T22:16:00+08:00  2021-12-29T07:40:00+08:00  2022-01-08T09:13:00+08:00.md  2022-01-21T09:52:00+08:00.md  2022-01-22T11:42:00+08:00.md  2022-01-29T15:11:00+08:00  2022-02-06T10:31:00+08:00  2022-02-10T21:49:00+08:00  2022-02-15T13:36:00+08:00.md  2022-02-18T21:08:00+08:00.md  2022-03-01T09:33:00+08:00.md  2022-03-07T09:44:00+08:00.md  2022-04-02T09:11:00+08:00.md  2022-04-03T11:03:00+08:00.md  2022-05-03T14:59:00+08:00.md  2022-05-12T16:14:00+08:00  2022-06-21T09:27:00+08:00.md  2022-07-06T14:33:00+08:00.md  redirect.txt  (+9 more)
(+160 files in other folders)
