[package]
name = "ideas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
chrono = "0.4.31"
markdown = "1.0.0-alpha.14"
rsass = "0.28.6"
serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
