[package]
name = "ideas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
chrono = "0.4.31"
html5ever = "0.26.0"
markdown = "1.0.0-alpha.14"
markup5ever = "0.11.0"
markup5ever_rcdom = "0.2.0"
maud = "0.25.0"
rsass = "0.28.6"
serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
walkdir = "2.4.0"
